@@ -6,6 +6,7 @@
 	Differentiate between something being disabled/restricted (because
 	of the way of invocation) and help texts being unavailable (which
 	is a compile-time decision).
+	* src/global.c (shortcut_init): Change "Justify" to a tag and regroup.
 
 2015-07-29  Benno Schulenberg  <bensberg@justemail.net>
 	* src/text.c (do_linter): When the linter is called in restricted mode
